@@ -22,3 +22,7 @@ endif()
 if(FLEX_FOUND AND BISON_FOUND AND KF5ThreadWeaver_FOUND)
     add_subdirectory(panorama)
 endif()
+
+if(ENABLE_DBUS)
+    add_subdirectory(wallpaper)
+endif()
