@@ -1,0 +1,26 @@
+#
+# Copyright (C) 2019 by Igor Antropov <antropovi at yahoo dot com>
+#
+# Redistribution and use is allowed according to the terms of the BSD license.
+# For details see the accompanying COPYING-CMAKE-SCRIPTS file.
+
+include(MacroDPlugins)
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}
+                    ${CMAKE_CURRENT_SOURCE_DIR}/tools
+
+                    $<TARGET_PROPERTY:Qt5::Widgets,INTERFACE_INCLUDE_DIRECTORIES>
+                    $<TARGET_PROPERTY:Qt5::Core,INTERFACE_INCLUDE_DIRECTORIES>
+                    $<TARGET_PROPERTY:Qt5::DBus,INTERFACE_INCLUDE_DIRECTORIES>
+
+                    $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
+                    $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
+)
+
+set(wallpaperplugin_SRCS
+    ${CMAKE_CURRENT_SOURCE_DIR}/wallpaperplugin.cpp
+)
+
+DIGIKAM_ADD_GENERIC_PLUGIN(NAME    Wallpaper
+                           SOURCES ${wallpaperplugin_SRCS}
+)
