@@ -1,0 +1,64 @@
+/* ============================================================
+ *
+ * This file is a part of digiKam project
+ * https://www.digikam.org
+ *
+ * Date        : 2019-04-02
+ * Description : plugin to export image as wallpaper
+ *
+ * Copyright (C) 2019 by Igor Antropov <antropovi at yahoo dot com>
+ *
+ * This program is free software; you can redistribute it
+ * and/or modify it under the terms of the GNU General
+ * Public License as published by the Free Software Foundation;
+ * either version 2, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * ============================================================ */
+
+#ifndef DIGIKAM_WALLPAPER_PLUGIN_H
+#define DIGIKAM_WALLPAPER_PLUGIN_H
+
+// Local includes
+
+#include "dplugingeneric.h"
+
+#define DPLUGIN_IID "org.kde.digikam.plugin.generic.Wallpaper"
+
+using namespace Digikam;
+
+namespace DigikamGenericWallpaperPlugin
+{
+
+class WallpaperPlugin : public DPluginGeneric
+{
+    Q_OBJECT
+    Q_PLUGIN_METADATA(IID DPLUGIN_IID)
+    Q_INTERFACES(Digikam::DPluginGeneric)
+
+public:
+
+    explicit WallpaperPlugin(QObject* const parent = 0);
+    ~WallpaperPlugin();
+
+    QString name()                 const override;
+    QString iid()                  const override;
+    QIcon   icon()                 const override;
+    QString details()              const override;
+    QString description()          const override;
+    QList<DPluginAuthor> authors() const override;
+
+    void setup(QObject* const) override;
+
+private Q_SLOTS:
+
+    void slotWallpaper();
+};
+
+} // namespace DigikamGenericWallpaperPlugin
+
+#endif // DIGIKAM_WALLPAPER_PLUGIN_H
